--- a/mediatheque-webapp/.settings/org.eclipse.wst.common.component
+++ b/mediatheque-webapp/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,24 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
+        <dependent-module archiveName="mediatheque-utils-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mediatheque-utils/mediatheque-utils">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="mediatheque-dto-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mediatheque-dto/mediatheque-dto">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="mediatheque-service-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mediatheque-service/mediatheque-service">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="mediatheque-tmdb-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mediatheque-tmdb/mediatheque-tmdb">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="mediatheque-persistence-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mediatheque-persistence/mediatheque-persistence">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="mediatheque-model-1.0.0-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mediatheque-model/mediatheque-model">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="mediatheque-webapp"/>
         <property name="java-output-path" value="/mediatheque-webapp/target/classes"/>
     </wb-module>
